gitops/environments/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loopit-dev
  labels:
    name: loopit-dev
    environment: development
